# mozu

./: .env.dev  .sqruff  Cargo.toml  Dockerfile  README.md  compose.yaml  justfile  sqlc.json
.devcontainer/: devcontainer.json
.github/workflows/: pull_request.yaml
src/: domain.rs  http.rs  lib.rs  main.rs  model.rs
src/ap/: actor.rs  mod.rs  webfinger.rs
src/ap/activity/: mod.rs  relationship.rs  status.rs
src/domain/: account.rs  ap.rs  hosturl.rs
src/domain/account/: adapter.rs  model.rs  service.rs
src/domain/ap/: adapter.rs  model.rs  service.rs  webfinger.rs
src/domain/ap/model/: actor.rs  follow.rs  note.rs
src/http/: accounts.rs  ap.rs  posts.rs  state.rs  users.rs  utils.rs  well_known.rs
src/http/ap/: actor.rs  inbox.rs
src/http/users/: actor.rs  create.rs  inbox.rs  outbox.rs
src/http/well_known/: webfinger.rs
src/infrastructure/: postgres.rs
src/infrastructure/postgres/: queries.rs
src/infrastructure/postgres/migrations/: 000001_init.down.sql  000001_init.up.sql
src/infrastructure/postgres/queries/: account.sql  ap.sql
src/model/: account.rs
src/model/account/: adapter.rs  model.rs
