[package]
name = "mozu"
version = "0.1.0"
edition = "2024"

[dependencies]
# http
axum = { version = "0.8", features = ["tracing", "macros"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tokio = { version = "1", features = ["full"] }

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# error
thiserror = { version = "2" }
anyhow = { version = "1.0" }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
pretty_assertions = { version = "1" }
rstest = { version = "0.25" }
