[package]
name = "mozu"
version = "0.1.0"
edition = "2024"

[dependencies]
# http
axum = { version = "0.8", features = ["tracing", "macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
mime = "0.3"


# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# error
thiserror = { version = "2" }
anyhow = { version = "1.0" }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# db
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
deadpool-postgres = { version = "0.14" }

# data types
url = { version = "2", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

# utilities
strum = { version = "0.27", features = ["derive"] }
regex = { version = "1.11" }
async-trait = { version = "0.1" }
typed-builder = { version = "0.21.0" }

[dev-dependencies]
pretty_assertions = { version = "1" }
rstest = { version = "0.25" }
